--- a/packages/content-api/package.json
+++ b/packages/content-api/package.json
@@ -9,7 +9,7 @@
     "./utils": "./src/utils/index.ts"
   },
   "scripts": {
-    "build:metadata": "pnpm build:schema && pnpm build:index",
+    "build": "pnpm build:schema && pnpm build:index",
     "build:index": "tsx ./scripts/build-index.ts",
     "build:schema": "tsx ./scripts/build-json-schema.ts",
     "check-types": "tsc --noEmit",
@@ -24,8 +24,8 @@
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
-    "@maw/eslint-config": "workspace:*",
-    "@maw/tsconfig": "workspace:*",
+    "@maw/config-eslint": "workspace:*",
+    "@maw/config-ts": "workspace:*",
     "@maw/utils": "workspace:*",
     "@types/sanitize-html": "^2.15.0",
     "eslint": "catalog:",
