--- a/packages/content-api/package.json
+++ b/packages/content-api/package.json
@@ -9,7 +9,7 @@
     "./utils": "./src/utils/index.ts"
   },
   "scripts": {
-    "build": "pnpm build:schema && pnpm build:index",
+    "build:metadata": "pnpm build:schema && pnpm build:index",
     "build:index": "tsx ./scripts/build-index.ts",
     "build:schema": "tsx ./scripts/build-json-schema.ts",
     "check-types": "tsc --noEmit",
