--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
     "symlink-dir": "6.0.5",
-    "turbo": "2.5.0"
+    "turbo": "2.5.0",
+    "typescript": "catalog:"
   },
   "engines": {
     "node": ">=20"
