--- a/apps/ui-docs/package.json
+++ b/apps/ui-docs/package.json
@@ -31,7 +31,7 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "eslint": "catalog:",
-    "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-storybook": "catalog:",
     "postcss": "catalog:",
     "storybook": "catalog:",
     "tailwindcss": "catalog:",
