--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -36,6 +36,7 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "eslint": "catalog:",
+    "eslint-plugin-storybook": "catalog:",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "catalog:",
     "tsx": "catalog:",
