--- a/turbo.json
+++ b/turbo.json
@@ -54,6 +54,7 @@
     "VERCEL_BRANCH_URL",
     "VERCEL_ENV",
     "VERCEL_GIT_COMMIT_REF",
+    "VERCEL_GIT_COMMIT_SHA",
     "VERCEL_PROJECT_PRODUCTION_URL"
   ]
 }
