--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,6 +51,7 @@
     "remark-gfm": "^4.0.1",
     "rtl-detect": "^1.1.2",
     "sanitize-html": "^2.15.0",
+    "zod": "catalog:",
     "zustand": "^5.0.3"
   },
   "peerDependencies": {
