--- a/packages/content-api/package.json
+++ b/packages/content-api/package.json
@@ -21,7 +21,7 @@
     "marked": "^15.0.7",
     "sanitize-html": "^2.15.0",
     "yaml": "^2.7.1",
-    "zod": "^3.24.2",
+    "zod": "catalog:",
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
