--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "next": "catalog:",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
+    "path-to-regexp": "^8.2.0",
     "react": "catalog:",
     "react-confetti": "^6.4.0",
     "react-dom": "catalog:",
