feat: refactoring auth module  (#134)
* feat: add zod to web

* feat: update tsc to resolve module paths

* feat: add readme to modules

* feat: add auth domain entities and interfaces

* feat: add mermaid tag to module readme

* feat: add fake auth repo with 2s timeout resolvers

* feat: add core module

* feat: add admin usecases

* feat: move auth comps under new module folder

* feat: slightly tweaked CA diagram

* feat: moved auth under new module folder - checkpoint commit

* feat: make form elements use dynamic field names

* feat: add loader state to login button

* feat: add auth to labeler

* feat: fix missing module type

* feat: remove unused props from captch

* feat: remove some redundant files and props

* fix: readd ts-jest to utils to fix test run

* fix: typos

* feat: add auth error vo and update repo interface

* feat: extend app view model with navigation elements

* feat: add dummy profile page

* feat: add auth error response transformer

* feat: add route alias value object

* feat: add route alias resolver to app view model

* feat: use the new navigation context

* feat: rename registration to signup in ui context

* feat: add a little formatting to form level errors

* feat: last few bits of cleanup

* feat: add missing loader to rest of the auth pages

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "next": "catalog:",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
+    "path-to-regexp": "^8.2.0",
     "react": "catalog:",
     "react-confetti": "^6.4.0",
     "react-dom": "catalog:",
@@ -51,6 +52,7 @@
     "remark-gfm": "^4.0.1",
     "rtl-detect": "^1.1.2",
     "sanitize-html": "^2.15.0",
+    "zod": "catalog:",
     "zustand": "^5.0.3"
   },
   "peerDependencies": {
