--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -26,8 +26,8 @@ catalog:
   "jest-environment-jsdom": "^29.7.0"
   "jest": "^29.7.0"
   "next": "^15.3.0"
-  "@playwright/test": "^1.52.0"
-  "playwright": "^1.52.0"
+  "@playwright/test": "1.54.2"
+  "playwright": "^1.54.2"
   "postcss": "^8.5.3"
   "react-dom": "^19.1.0"
   "react": "^19.1.0"
