--- a/turbo.json
+++ b/turbo.json
@@ -55,6 +55,8 @@
     "VERCEL_ENV",
     "VERCEL_GIT_COMMIT_REF",
     "VERCEL_GIT_COMMIT_SHA",
-    "VERCEL_PROJECT_PRODUCTION_URL"
+    "VERCEL_PROJECT_PRODUCTION_URL",
+    "PLAYWRIGHT_HTML_PORT",
+    "PLAYWRIGHT_HTML_HOST"
   ]
 }
