--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,31 +29,31 @@
     "@maw/utils": "workspace:^",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/bundle-analyzer": "^15.2.4",
-    "@next/mdx": "^15.2.4",
-    "@sentry/nextjs": "^9.10.1",
+    "@next/bundle-analyzer": "^15.4.6",
+    "@next/mdx": "^15.4.6",
+    "@sentry/nextjs": "^10.2.0",
     "@vercel/analytics": "^1.5.0",
     "classnames": "^2.5.1",
     "color": "^5.0.0",
-    "eslint-config-next": "^15.2.4",
-    "html-react-parser": "^5.2.2",
+    "eslint-config-next": "^15.4.6",
+    "html-react-parser": "^5.2.6",
     "next": "catalog:",
-    "next-intl": "^4.0.2",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "path-to-regexp": "^8.2.0",
     "react": "catalog:",
     "react-confetti": "^6.4.0",
     "react-dom": "catalog:",
-    "react-fast-marquee": "^1.6.5",
-    "react-hook-form": "^7.55.0",
-    "react-share": "^5.2.2",
-    "react-timeago": "^8.0.0",
+    "react-fast-marquee": "catalog:",
+    "react-hook-form": "catalog:",
+    "react-share": "catalog:",
+    "react-timeago": "^8.3.0",
     "react-use": "^17.6.0",
     "remark-gfm": "^4.0.1",
     "rtl-detect": "^1.1.2",
-    "sanitize-html": "^2.15.0",
+    "sanitize-html": "catalog:",
     "zod": "catalog:",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.7"
   },
   "peerDependencies": {
     "express": "^5.1.0"
@@ -76,19 +76,19 @@
     "@types/react-dom": "catalog:",
     "@types/react-timeago": "^4.1.7",
     "@types/rtl-detect": "^1.0.3",
-    "@types/sanitize-html": "^2.15.0",
+    "@types/sanitize-html": "catalog:",
     "eslint": "catalog:",
     "favicons": "^7.2.0",
     "jest": "catalog:",
     "playwright": "catalog:",
     "postcss": "catalog:",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "sharp": "catalog:",
     "tailwindcss": "catalog:",
     "ts-node": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:",
-    "typescript-eslint": "^8.28.0"
+    "typescript-eslint": "catalog:"
   }
 }
