--- a/apps/ui-docs/package.json
+++ b/apps/ui-docs/package.json
@@ -18,24 +18,28 @@
   "devDependencies": {
     "@maw/config-eslint": "workspace:^",
     "@maw/config-ts": "workspace:*",
-    "@storybook/addon-essentials": "catalog:",
-    "@storybook/addon-interactions": "catalog:",
-    "@storybook/addon-links": "catalog:",
-    "@storybook/addon-styling-webpack": "^1.0.1",
-    "@storybook/addon-themes": "catalog:",
-    "@storybook/blocks": "catalog:",
-    "@storybook/nextjs": "catalog:",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/addon-themes": "^8.6.14",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/nextjs": "^8.6.14",
     "@storybook/react": "catalog:",
     "@storybook/test": "catalog:",
+    "@storybook/types": "catalog:",
+    "@storybook/addon-styling-webpack": "^1.0.1",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-storybook": "catalog:",
     "postcss": "catalog:",
-    "storybook": "catalog:",
+    "storybook": "8.6.14",
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
+  },
+  "peerDependencies": {
+    "pbkdf2": "^3.1.3"
   },
   "eslintConfig": {
     "extends": [
