--- a/packages/content-api/package.json
+++ b/packages/content-api/package.json
@@ -18,17 +18,17 @@
   },
   "dependencies": {
     "@maw/logger": "workspace:^",
-    "marked": "^15.0.7",
-    "sanitize-html": "^2.15.0",
-    "yaml": "^2.7.1",
+    "marked": "catalog:",
+    "sanitize-html": "catalog:",
+    "yaml": "^2.8.1",
     "zod": "catalog:",
-    "zod-to-json-schema": "^3.24.5"
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@maw/config-eslint": "workspace:*",
     "@maw/config-ts": "workspace:*",
     "@maw/utils": "workspace:*",
-    "@types/sanitize-html": "^2.15.0",
+    "@types/sanitize-html": "catalog:",
     "eslint": "catalog:",
     "sharp": "catalog:",
     "tsx": "catalog:",
