--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,39 +3,39 @@ packages:
   - "packages/*"
 
 catalog:
-  "@eslint/js": "9.24.0"
-  "@storybook/addon-essentials": "^8.6.12"
-  "@storybook/addon-interactions": "^8.6.12"
-  "@storybook/addon-links": "^8.6.12"
-  "@storybook/addon-themes": "^8.6.12"
-  "@storybook/blocks": "^8.6.12"
-  "@storybook/nextjs": "^8.6.12"
-  "@storybook/react": "^8.6.12"
-  "@storybook/test": "^8.6.12"
-  "@storybook/types": "^8.6.12"
-  "@tailwindcss/postcss": "^4.1.4"
-  "@testing-library/jest-dom": "^6.6.3"
+  "@eslint/js": "9.32.0"
+  "@playwright/test": "1.54.2"
+  "@storybook/react": "^8.6.14"
+  "@storybook/test": "^8.6.14"
+  "@storybook/types": "^8.6.14"
+  "@tailwindcss/postcss": "^4.1.11"
+  "@testing-library/jest-dom": "^6.6.4"
   "@types/jest": "^29.5.14"
-  "@types/node": "^22.13.14"
-  "@types/react-dom": "^19.1.2"
-  "@types/react": "^19.1.2"
-  "eslint": "^9.24.0"
-  "eslint-plugin-import-x": "^4.10.5"
-  "eslint-plugin-prettier": "^5.2.5"
+  "@types/node": "^24.2.0"
+  "@types/react-dom": "^19.1.7"
+  "@types/react": "^19.1.9"
+  "@types/sanitize-html": "^2.16.0"
+  "eslint-plugin-import-x": "^4.16.1"
+  "eslint-plugin-prettier": "^5.5.4"
   "eslint-plugin-storybook": "^0.12.0"
+  "eslint": "^9.32.0"
   "jest-environment-jsdom": "^29.7.0"
   "jest": "^29.7.0"
-  "next": "^15.3.0"
-  "@playwright/test": "1.54.2"
+  "marked": "^16.1.2"
+  "next": "^15.4.6"
   "playwright": "^1.54.2"
-  "postcss": "^8.5.3"
-  "react-dom": "^19.1.0"
-  "react": "^19.1.0"
-  "sharp": "^0.34.1"
-  "storybook": "^8.6.12"
-  "tailwindcss": "^4.1.4"
-  "ts-jest": "^29.3.2"
+  "postcss": "^8.5.6"
+  "react-dom": "^19.1.01"
+  "react-fast-marquee": "^1.6.5"
+  "react-hook-form": "7.62.0"
+  "react-share": "^5.2.2"
+  "react": "^19.1.1"
+  "sanitize-html": "^2.17.0"
+  "sharp": "^0.34.3"
+  "tailwindcss": "^4.1.11"
+  "ts-jest": "^29.4.1"
   "ts-node": "^10.9.2"
-  "tsx": "^4.19.3"
-  "typescript": "^5.8.3"
+  "tsx": "^4.20.3"
+  "typescript-eslint": "^8.39.0"
+  "typescript": "5.8.2"
   "zod": "^3.24.2"
