--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "color": "^5.0.0",
     "eslint-config-next": "^15.4.6",
     "html-react-parser": "^5.2.6",
+    "inversify": "^7.8.1",
     "next": "catalog:",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
@@ -49,6 +50,7 @@
     "react-share": "catalog:",
     "react-timeago": "^8.3.0",
     "react-use": "^17.6.0",
+    "reflect-metadata": "^0.2.2",
     "remark-gfm": "^4.0.1",
     "rtl-detect": "^1.1.2",
     "sanitize-html": "catalog:",
