feat: extracting kernel into its own folder and ironing out form validators

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -11,6 +11,9 @@
       ],
       "@/modules/*": [
         "./modules/*"
+      ],
+      "@/kernel": [
+        "./kernel/index.ts"
       ]
     },
     "experimentalDecorators": true,
