chore(*): update to Next.js 16 and Storybook 10

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,9 +20,9 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/fontawesome-svg-core": "catalog:",
+    "@fortawesome/free-solid-svg-icons": "catalog:",
+    "@fortawesome/react-fontawesome": "catalog:",
     "@hookform/resolvers": "^5.2.2",
     "@maw/content-api": "workspace:^",
     "@maw/logger": "workspace:^",
@@ -30,19 +30,19 @@
     "@maw/utils": "workspace:^",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/bundle-analyzer": "^15.4.6",
-    "@next/mdx": "^15.4.6",
-    "@sentry/nextjs": "^10.2.0",
+    "@next/bundle-analyzer": "^16.0.5",
+    "@next/mdx": "^16.0.5",
+    "@sentry/nextjs": "^10.27.0",
     "@vercel/analytics": "^1.5.0",
     "classnames": "^2.5.1",
-    "color": "^5.0.0",
-    "eslint-config-next": "^15.4.6",
-    "html-react-parser": "^5.2.6",
-    "inversify": "^7.8.1",
+    "color": "^5.0.3",
+    "eslint-config-next": "^16.0.5",
+    "html-react-parser": "^5.2.10",
+    "inversify": "^7.10.4",
     "next": "catalog:",
-    "next-intl": "^4.3.4",
+    "next-intl": "^4.5.6",
     "next-themes": "^0.4.6",
-    "path-to-regexp": "^8.2.0",
+    "path-to-regexp": "^8.3.0",
     "react": "catalog:",
     "react-confetti": "^6.4.0",
     "react-dom": "catalog:",
@@ -56,7 +56,7 @@
     "rtl-detect": "^1.1.2",
     "sanitize-html": "catalog:",
     "zod": "catalog:",
-    "zustand": "^5.0.7"
+    "zustand": "^5.0.8"
   },
   "peerDependencies": {
     "express": "^5.1.0"
@@ -65,19 +65,19 @@
     "@maw/config-eslint": "workspace:^",
     "@maw/config-jest": "workspace:^",
     "@maw/config-ts": "workspace:^",
-    "@next/eslint-plugin-next": "^15.2.4",
+    "@next/eslint-plugin-next": "^16.0.5",
     "@playwright/test": "catalog:",
     "@tailwindcss/postcss": "catalog:",
-    "@testing-library/dom": "^10.4.0",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "catalog:",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/react": "^16.3.0",
     "@types/eslint": "^9.6.1",
     "@types/jest": "catalog:",
     "@types/mdx": "^2.0.13",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "@types/react-timeago": "^4.1.7",
+    "@types/react-timeago": "^8.0.0",
     "@types/rtl-detect": "^1.0.3",
     "@types/sanitize-html": "catalog:",
     "eslint": "catalog:",
@@ -85,8 +85,8 @@
     "jest": "catalog:",
     "playwright": "catalog:",
     "postcss": "catalog:",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
+    "prettier": "^3.7.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "sharp": "catalog:",
     "tailwindcss": "catalog:",
     "ts-node": "catalog:",
