--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -16,9 +16,9 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^7.0.0",
-    "@fortawesome/free-solid-svg-icons": "^7.0.0",
-    "@fortawesome/react-fontawesome": "^0.2.3",
+    "@fortawesome/fontawesome-svg-core": "catalog:",
+    "@fortawesome/free-solid-svg-icons": "catalog:",
+    "@fortawesome/react-fontawesome": "catalog:",
     "marked": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
@@ -30,15 +30,15 @@
     "@maw/config-eslint": "workspace:*",
     "@maw/config-ts": "workspace:*",
     "@maw/utils": "workspace:*",
+    "@storybook/nextjs": "^10.1.2",
     "@storybook/react": "catalog:",
-    "@storybook/test": "catalog:",
-    "@storybook/types": "catalog:",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-storybook": "catalog:",
-    "prettier-plugin-tailwindcss": "^0.6.14",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "storybook": "catalog:",
     "tailwindcss": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:"
