--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,39 +3,41 @@ packages:
   - "packages/*"
 
 catalog:
-  "@eslint/js": "9.32.0"
-  "@playwright/test": "1.55.0"
-  "@storybook/react": "^8.6.14"
-  "@storybook/test": "^8.6.14"
-  "@storybook/types": "^8.6.14"
-  "@tailwindcss/postcss": "^4.1.11"
-  "@testing-library/jest-dom": "^6.6.4"
-  "@types/jest": "^29.5.14"
-  "@types/node": "^24.2.0"
-  "@types/react-dom": "^19.1.7"
-  "@types/react": "^19.1.9"
+  "@eslint/js": "9.39.1"
+  "@fortawesome/fontawesome-svg-core": "^7.1.0"
+  "@fortawesome/free-solid-svg-icons": "^7.1.0"
+  "@fortawesome/react-fontawesome": "^3.1.1"
+  "@playwright/test": "1.57.0"
+  "@storybook/react": "^10.1.2"
+  "@tailwindcss/postcss": "^4.1.17"
+  "@testing-library/jest-dom": "^6.9.1"
+  "@types/jest": "^30.0.0"
+  "@types/node": "^24.10.1"
+  "@types/react-dom": "^19.2.3"
+  "@types/react": "^19.2.7"
   "@types/sanitize-html": "^2.16.0"
   "eslint-plugin-import-x": "^4.16.1"
   "eslint-plugin-prettier": "^5.5.4"
-  "eslint-plugin-storybook": "^0.12.0"
-  "eslint": "^9.32.0"
-  "jest-environment-jsdom": "^29.7.0"
-  "jest": "^29.7.0"
-  "marked": "^16.1.2"
-  "next": "^15.4.6"
-  "playwright": "^1.55.0"
+  "eslint-plugin-storybook": "^10.1.2"
+  "eslint": "^9.39.1"
+  "jest-environment-jsdom": "^30.2.0"
+  "jest": "^30.2.0"
+  "marked": "^17.0.1"
+  "next": "^16.0.5"
+  "playwright": "^1.57.0"
   "postcss": "^8.5.6"
-  "react-dom": "^19.1.1"
+  "react-dom": "^19.2.0"
   "react-fast-marquee": "^1.6.5"
-  "react-hook-form": "7.62.0"
+  "react-hook-form": "7.67.0"
   "react-share": "^5.2.2"
-  "react": "^19.1.1"
+  "react": "^19.2.0"
   "sanitize-html": "^2.17.0"
-  "sharp": "^0.34.3"
-  "tailwindcss": "^4.1.11"
-  "ts-jest": "^29.4.1"
+  "sharp": "^0.34.5"
+  "storybook": "10.1.2"
+  "tailwindcss": "^4.1.17"
+  "ts-jest": "^29.4.5"
   "ts-node": "^10.9.2"
-  "tsx": "^4.20.3"
-  "typescript-eslint": "^8.39.0"
-  "typescript": "5.8.2"
-  "zod": "^4.1.8"
+  "tsx": "^4.20.6"
+  "typescript-eslint": "^8.48.0"
+  "typescript": "5.9.3"
+  "zod": "^4.1.13"
