chore(*): fix web app build

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,8 +10,8 @@
     "build:web-manifest": "tsx ./scripts/build-web-manifest.ts",
     "check-types": "tsc --project tsconfig.json --pretty --noEmit",
     "dev": "pnpm run build:deployment-meta && next dev --experimental-https",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "publish:assets": "tsx ./scripts/publish-assets.ts",
     "start": "pnpm run build:deployment-meta && next start",
     "test": "jest",
