--- a/apps/ui-docs/package.json
+++ b/apps/ui-docs/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@maw/ui-lib": "workspace:*",
+    "@storybook/addon-docs": "^10.1.2",
     "next": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:"
@@ -19,10 +20,10 @@
     "@maw/config-eslint": "workspace:^",
     "@maw/config-ts": "workspace:*",
     "@storybook/addon-links": "^10.1.2",
+    "@storybook/addon-styling-webpack": "^3.0.0",
     "@storybook/addon-themes": "^10.1.2",
     "@storybook/nextjs": "^10.1.2",
     "@storybook/react": "catalog:",
-    "@storybook/addon-styling-webpack": "^3.0.0",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
