--- a/apps/ui-docs/package.json
+++ b/apps/ui-docs/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@maw/ui-lib": "workspace:*",
+    "@storybook/addon-docs": "^10.1.2",
     "next": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:"
@@ -18,28 +19,23 @@
   "devDependencies": {
     "@maw/config-eslint": "workspace:^",
     "@maw/config-ts": "workspace:*",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-links": "^8.6.14",
-    "@storybook/addon-themes": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/nextjs": "^8.6.14",
+    "@storybook/addon-links": "^10.1.2",
+    "@storybook/addon-styling-webpack": "^3.0.0",
+    "@storybook/addon-themes": "^10.1.2",
+    "@storybook/nextjs": "^10.1.2",
     "@storybook/react": "catalog:",
-    "@storybook/test": "catalog:",
-    "@storybook/types": "catalog:",
-    "@storybook/addon-styling-webpack": "^1.0.1",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-storybook": "catalog:",
     "postcss": "catalog:",
-    "storybook": "8.6.14",
+    "storybook": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
   },
   "peerDependencies": {
-    "pbkdf2": "^3.1.3"
+    "pbkdf2": "^3.1.5"
   },
   "eslintConfig": {
     "extends": [
