--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -12,8 +12,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "pino": "^9.8.0",
-    "pino-pretty": "^13.1.1"
+    "tslog": "^4.10.2"
   },
   "devDependencies": {
     "@maw/config-eslint": "workspace:*",
