feat(donation): add lottie animation, donation balance, multiple methods

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "catalog:",
     "@fortawesome/react-fontawesome": "catalog:",
     "@hookform/resolvers": "^5.2.2",
+    "@lottiefiles/dotlottie-react": "^0.17.8",
     "@maw/content-api": "workspace:^",
     "@maw/logger": "workspace:^",
     "@maw/ui-lib": "workspace:^",
@@ -43,6 +44,7 @@
     "next-intl": "^4.5.6",
     "next-themes": "^0.4.6",
     "path-to-regexp": "^8.3.0",
+    "qrcode.react": "^4.2.0",
     "react": "catalog:",
     "react-confetti": "^6.4.0",
     "react-dom": "catalog:",
