--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# Claude Code local settings
+.claude/settings.local.json
+.claude/CLAUDE.local.md
