--- a/packages/config-jest/package.json
+++ b/packages/config-jest/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "@maw/config-jest",
   "version": "0.0.0",
+  "type": "module",
   "exports": {
     "./base": "./configs/base.ts",
     "./setup": "./configs/setup.ts"
