--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "classnames": "^2.5.1",
     "color": "^5.0.3",
     "eslint-config-next": "^16.1.6",
+    "framer-motion": "^12.34.0",
     "html-react-parser": "^5.2.17",
     "inversify": "^7.11.0",
     "next": "catalog:",
@@ -48,7 +49,6 @@
     "react": "catalog:",
     "react-confetti": "^6.4.0",
     "react-dom": "catalog:",
-    "react-fast-marquee": "catalog:",
     "react-hook-form": "catalog:",
     "react-share": "catalog:",
     "react-timeago": "^8.3.0",
