--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -23,11 +23,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "marked": "catalog:",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "catalog:",
     "react-dom": "catalog:",
     "react-hook-form": "catalog:",
     "react-share": "catalog:",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0"
   },
