feat(screensaver): small visual tweaks for runtime info debug

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,7 +9,8 @@
     "./currency": "./src/currency.ts",
     "./math": "./src/math.ts",
     "./promise": "./src/promise.ts",
-    "./string": "./src/string.ts"
+    "./string": "./src/string.ts",
+    "./time": "./src/time.ts"
   },
   "scripts": {
     "check-types": "tsc --noEmit",
