--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,6 +44,7 @@
     "next": "catalog:",
     "next-intl": "^4.8.2",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "path-to-regexp": "^8.3.0",
     "qrcode.react": "^4.2.0",
     "react": "catalog:",
