--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,6 +9,7 @@
     "./currency": "./src/currency.ts",
     "./math": "./src/math.ts",
     "./promise": "./src/promise.ts",
+    "./seed": "./src/seed.ts",
     "./string": "./src/string.ts",
     "./time": "./src/time.ts"
   },
