feat(linter): removed eslint packages and added default biome

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,13 @@
 {
-  "editor.formatOnSave": false, // to avoid conflicts with prettier and eslint keep this off
-  "prettier.enable": false, // Avoid using prettier plugin since that is being handled by eslint
+  "editor.defaultFormatter": "biomejs.biome",
+  "editor.formatOnSave": true,
   "editor.wordWrap": "on",
   "editor.formatOnSaveMode": "modifications",
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit",
-    "source.addMissingImports": "explicit"
+    "source.organizeImports.biome": "explicit"
   },
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact"
-  ],
-  "eslint.workingDirectories": [
-    "apps/ui-docs",
-    "apps/web",
-    "packages/content-api",
-    "packages/ui",
-    "packages/eslint-config",
-    "packages/jest-preset",
-    "packages/tsconfig",
-    "packages/utils",
- ],
   "files.associations": {
     "*.css": "tailwindcss"
   },
