--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,13 @@
 {
   "recommendations": [
     "bradlc.vscode-tailwindcss",
-    "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "redhat.vscode-yaml",
     "rubymaniac.vscode-direnv",
     "unifiedjs.vscode-mdx",
     "yoavbls.pretty-ts-errors",
     "me-dutour-mathieu.vscode-github-actions",
-    "antfu.pnpm-catalog-lens"
+    "antfu.pnpm-catalog-lens",
+    "biomejs.biome"
   ]
 }
