--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,8 +10,9 @@
     "build:web-manifest": "tsx ./scripts/build-web-manifest.ts",
     "check-types": "tsc --project tsconfig.json --pretty --noEmit",
     "dev": "pnpm run build:deployment-meta && next dev --experimental-https",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
+    "lint": "biome check .",
+    "format": "biome format --write .",
+    "lint:fix": "biome check --write .",
     "publish:assets": "tsx ./scripts/publish-assets.ts",
     "start": "pnpm run build:deployment-meta && next start",
     "test": "jest",
@@ -37,7 +38,6 @@
     "@vercel/analytics": "^1.6.1",
     "classnames": "^2.5.1",
     "color": "^5.0.3",
-    "eslint-config-next": "^16.1.6",
     "framer-motion": "^12.34.3",
     "html-react-parser": "^5.2.17",
     "inversify": "^7.11.0",
@@ -65,16 +65,14 @@
     "express": "^5.2.1"
   },
   "devDependencies": {
-    "@maw/config-eslint": "workspace:^",
+    "@biomejs/biome": "catalog:",
     "@maw/config-jest": "workspace:^",
     "@maw/config-ts": "workspace:^",
-    "@next/eslint-plugin-next": "^16.1.6",
     "@playwright/test": "catalog:",
     "@tailwindcss/postcss": "catalog:",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "catalog:",
     "@testing-library/react": "^16.3.2",
-    "@types/eslint": "^9.6.1",
     "@types/jest": "catalog:",
     "@types/mdx": "^2.0.13",
     "@types/node": "catalog:",
@@ -82,7 +80,6 @@
     "@types/react-dom": "catalog:",
     "@types/rtl-detect": "^1.0.3",
     "@types/sanitize-html": "catalog:",
-    "eslint": "catalog:",
     "favicons": "^7.2.0",
     "jest": "catalog:",
     "playwright": "catalog:",
@@ -93,7 +90,6 @@
     "tailwindcss": "catalog:",
     "ts-node": "catalog:",
     "tsx": "catalog:",
-    "typescript": "catalog:",
-    "typescript-eslint": "catalog:"
+    "typescript": "catalog:"
   }
 }
