--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "prepare": "husky",
-    "link-assets": "npx symlink-dir ./packages/content-api/data ./apps/web/public/assets/articles",
+    "link-assets": "pnpx symlink-dir ./packages/content-api/data ./apps/web/public/assets/articles",
     "test": "turbo run test",
     "test:e2e": "turbo run test:e2e",
     "clean": "turbo run clean --force",
