--- a/packages/config-jest/package.json
+++ b/packages/config-jest/package.json
@@ -9,14 +9,14 @@
   },
   "scripts": {
     "check-types": "tsc --noEmit",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "biome check .",
+    "format": "biome format --write .",
+    "lint:fix": "biome check --write ."
   },
   "devDependencies": {
-    "@maw/config-eslint": "workspace:*",
+    "@biomejs/biome": "catalog:",
     "@maw/config-ts": "workspace:*",
     "@types/jest": "catalog:",
-    "eslint": "catalog:",
     "jest": "catalog:",
     "typescript": "catalog:"
   }
