--- a/packages/ui-lib/package.json
+++ b/packages/ui-lib/package.json
@@ -12,8 +12,9 @@
   },
   "scripts": {
     "check-types": "tsc --noEmit",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "biome check .",
+    "format": "biome format --write .",
+    "lint:fix": "biome check --write ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "catalog:",
@@ -34,16 +35,14 @@
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
-    "@maw/config-eslint": "workspace:*",
+    "@biomejs/biome": "catalog:",
     "@maw/config-ts": "workspace:*",
     "@maw/utils": "workspace:*",
     "@storybook/nextjs": "^10.2.7",
     "@storybook/react": "catalog:",
     "@types/node": "catalog:",
-    "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "eslint": "catalog:",
-    "eslint-plugin-storybook": "catalog:",
+    "@types/react": "catalog:",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "storybook": "catalog:",
     "tailwindcss": "catalog:",
