--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,7 +3,7 @@ packages:
   - "packages/*"
 
 catalog:
-  "@eslint/js": "9.39.2"
+  "@biomejs/biome": "^2.4.0"
   "@fortawesome/fontawesome-svg-core": "^7.1.0"
   "@fortawesome/free-solid-svg-icons": "^7.1.0"
   "@fortawesome/react-fontawesome": "^3.2.0"
@@ -16,10 +16,6 @@ catalog:
   "@types/react-dom": "^19.2.3"
   "@types/react": "^19.2.13"
   "@types/sanitize-html": "^2.16.0"
-  "eslint-plugin-import-x": "^4.16.1"
-  "eslint-plugin-prettier": "^5.5.5"
-  "eslint-plugin-storybook": "^10.2.12"
-  "eslint": "^9.39.2"
   "jest-environment-jsdom": "^30.2.0"
   "jest": "^30.2.0"
   "marked": "^17.0.1"
@@ -37,6 +33,5 @@ catalog:
   "ts-jest": "^29.4.6"
   "ts-node": "^10.9.2"
   "tsx": "^4.21.0"
-  "typescript-eslint": "^8.54.0"
   "typescript": "5.9.3"
   "zod": "^4.3.6"
