chore(linter): apply biome formatting to packages

--- a/packages/ui-lib/tsconfig.json
+++ b/packages/ui-lib/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "extends": "@maw/config-ts/configs/react-library.json",
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "."
   },
-  "include": [
-    "src"
-  ],
+  "include": ["src"]
 }
