--- a/turbo.json
+++ b/turbo.json
@@ -4,10 +4,7 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build", "build:metadata"],
-      "inputs": [
-        "$TURBO_DEFAULT$",
-        ".env*"
-      ],
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": [
         ".next/**",
         "!.next/cache/**",
