--- a/biome.json
+++ b/biome.json
@@ -27,7 +27,8 @@
           "options": {
             "ignore": ["global"]
           }
-        }
+        },
+        "useExhaustiveDependencies": "info"
       }
     }
   },
