--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
   "dependencies": {
     "import-in-the-middle": "^3.0.0",
     "require-in-the-middle": "^8.0.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@sentry/cli"
+    ]
   }
 }
