fix(general): web metadata builder pipeline should now have proper trailing nl

--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "onlyBuiltDependencies": [
       "@sentry/cli"
     ]
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx,json,css,md}": "biome check --write"
   }
 }
